# Projectx

./: .env.example  .gitignore  Dockerfile  README.md  evaluate.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
ProjecX/: main.py  requirements.txt
ProjecX/Auto/: model.py  prompt.py  team.py  web_search.py
ProjecX/Autogen/: Rag_agent.py  model.py  prompt.py  validator.py  web_search.agent.py
ProjecX/Llama_index/: Data_ingestion.py  Rag_pipeline.py  chroma_client.py  data_retirval.py  model_loader.py  qdrantclient.py  sparse.py
ProjecX/vector_store/: docstore.json  index_store.json
projecx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test.py
tests/: test_*.py  test_app.py
vector_store/qwen3-embedding:4b/dim_2560/: default__vector_store.json  docstore.json  index_store.json
vector_stores/24beafe7-dfb8-45de-9b86-59d96bb9bd3f/: docstore.json  index_store.json
vector_stores/74d31829-c2e1-433e-95e4-a3068b28a330/: docstore.json  index_store.json
vector_stores/a2292c85-6f54-457e-89fd-c288ee51ae67/: docstore.json  index_store.json
vector_stores/ae38b311-e762-454b-bd9b-89712fc49aee/: docstore.json  index_store.json
