[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "projecx"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["ProjecX*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning"
]

